Drop deprecated code around MD and JMF attributes